Add referenced resources (#7)

--- a/docs/example-config.yml
+++ b/docs/example-config.yml
@@ -18,11 +18,15 @@ includeResources: true
 # Inlude the outputs section
 includeOutputs: true
 
+# Include referenced resources
+includeReferencedResources: true
+
 # Section order for the generated document
 sectionOrder:
   - title
   - description
   - usage
+  - referencedResources
   - parameters
   - resources
   - outputs
