--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 on:
   push:
-    branches: [main, feature/9-workflows]
+    branches: [main]
   pull_request:
     branches: [main]
   workflow_dispatch:
@@ -43,6 +43,6 @@ jobs:
       - name: Upload BicepDocs
         uses: actions/upload-artifact@v3
         with:
-          name: bicep-release-${{ matrix.rid }}
+          name: bicepdocs-${{ matrix.rid }}
           path: ./src/BicepDocs.Cli/bin/release/net6.0/${{ matrix.rid }}/publish/*
           if-no-files-found: error
