--- a/src/BicepDocs.Cli/BicepDocs.Cli.csproj
+++ b/src/BicepDocs.Cli/BicepDocs.Cli.csproj
@@ -19,7 +19,7 @@
 
     <ItemGroup>
         <PackageReference Include="Azure.Bicep.Decompiler" Version="0.13.1" />
-        <PackageReference Include="Serilog" Version="2.12.1-dev-01594" />
+        <PackageReference Include="Serilog" Version="2.12.0" />
         <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
         <PackageReference Include="System.CommandLine.Hosting" Version="0.4.0-alpha.22272.1" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
