--- a/src/BicepDocs.Cli/BicepDocs.Cli.csproj
+++ b/src/BicepDocs.Cli/BicepDocs.Cli.csproj
@@ -31,6 +31,7 @@
         <ProjectReference Include="..\BicepDocs.Destination.FileSystem\BicepDocs.Destination.FileSystem.csproj" />
         <ProjectReference Include="..\BicepDocs.Formatter.Docusaurus\BicepDocs.Formatter.Docusaurus.csproj" />
         <ProjectReference Include="..\BicepDocs.Formatter.Markdown\BicepDocs.Formatter.Markdown.csproj" />
+        <ProjectReference Include="..\BicepDocs.Source.AzureContainerRegistry\BicepDocs.Source.AzureContainerRegistry.csproj" />
         <ProjectReference Include="..\BicepDocs.Source.FileSystem\BicepDocs.Source.FileSystem.csproj" />
     </ItemGroup>
 
