--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
+    needs: build-cli
     steps:
       - uses: actions/download-artifact@v3
         with:
