--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,17 @@ name: Build
 
 on:
   push:
-    branches: [main]
-  workflow_dispatch:
+    tags:
+      - "v*"
+  # workflow_dispatch:
+  #   inputs:
+  #     version:
+  #       description: "Version to create release for"
+  #       required: true
+  #       type: string
+
+permissions:
+  contents: write
 
 env:
   CI: true
@@ -18,10 +27,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          #- rid: win-x64
+          - rid: win-x64
           - rid: linux-x64
-          #- rid: linux-musl-x64
           - rid: osx-x64
+          #- rid: linux-musl-x64
           #- rid: linux-arm64
           #- rid: win-arm64
           #- rid: osx-arm64
@@ -33,11 +42,49 @@ jobs:
         run: dotnet build --configuration release src/BicepDocs.sln
       - name: Run tests
         run: dotnet test --configuration release ./src/**/*Tests.csproj
+      - id: get-version
+        run: |
+          parsedVersion=$(echo ${{ github.ref }} | cut -dv -f2)
+          echo "::set-output name=version::$parsedVersion"
       - name: Publish BicepDocs
-        run: dotnet publish --configuration release --self-contained true -p:PublishTrimmed=true -p:PublishSingleFile=true -p:TrimmerDefaultAction=copyused -p:SuppressTrimAnalysisWarnings=true -r ${{ matrix.rid }} ./src/BicepDocs.Cli/BicepDocs.Cli.csproj
+        run: dotnet publish --configuration release --self-contained true -p:AssemblyVersion=${{ steps.get-version.outputs.version }} -p:PublishTrimmed=true -p:PublishSingleFile=true -p:TrimmerDefaultAction=copyused -p:SuppressTrimAnalysisWarnings=true -r ${{ matrix.rid }} ./src/BicepDocs.Cli/BicepDocs.Cli.csproj
+      - name: Rename binary
+        if: matrix.rid != 'win-x64'
+        run: mv ./src/BicepDocs.Cli/bin/release/net6.0/${{ matrix.rid }}/publish/bicepdocs ./src/BicepDocs.Cli/bin/release/net6.0/${{ matrix.rid }}/publish/bicepdocs-${{ matrix.rid }}
+      - name: Rename binary (win)
+        if: matrix.rid == 'win-x64'
+        run: mv ./src/BicepDocs.Cli/bin/release/net6.0/${{ matrix.rid }}/publish/bicepdocs.exe ./src/BicepDocs.Cli/bin/release/net6.0/${{ matrix.rid }}/publish/bicepdocs-${{ matrix.rid }}.exe
       - name: Upload BicepDocs
+        if: matrix.rid != 'win-x64'
         uses: actions/upload-artifact@v3
         with:
           name: bicepdocs-${{ matrix.rid }}
-          path: ./src/BicepDocs.Cli/bin/release/net6.0/${{ matrix.rid }}/publish/*
+          path: ./src/BicepDocs.Cli/bin/release/net6.0/${{ matrix.rid }}/publish/bicepdocs-${{ matrix.rid }}
           if-no-files-found: error
+      - name: Upload BicepDocs
+        if: matrix.rid == 'win-x64'
+        uses: actions/upload-artifact@v3
+        with:
+          name: bicepdocs-${{ matrix.rid }}
+          path: ./src/BicepDocs.Cli/bin/release/net6.0/${{ matrix.rid }}/publish/bicepdocs-${{ matrix.rid }}.exe
+          if-no-files-found: error
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: build-cli
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          path: ./binaries
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: ./binaries
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: true
+          prerelease: true
+          fail_on_unmatched_files: true
+          generate_release_notes: true
+          files: ./binaries/**/*
+#          tag_name: ${{  github.event.inputs.version }}
