--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build BicepDocs
         run: dotnet build --configuration release src/BicepDocs.sln
       - name: Run tests
-        run: dotnet test --configuration release ./src/**/*Tests.csproj
+        run: dotnet test --configuration release src/BicepDocs.sln
       - name: Build binary
         run: dotnet publish --configuration release --self-contained true -p:PublishTrimmed=true -p:PublishSingleFile=true -p:TrimmerDefaultAction=copyused -p:SuppressTrimAnalysisWarnings=true -r ${{ matrix.rid }} ./src/BicepDocs.Cli/BicepDocs.Cli.csproj
     
