ci: update pr pipeline

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -17,14 +17,17 @@ env:
 jobs:
   build-cli:
     name: Build CLI (${{ matrix.rid }})
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         include:
           - rid: win-x64
+            os: windows-latest
           - rid: linux-x64
+            os: ubuntu-latest
           - rid: osx-x64
+            os: macos-latest
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET Core
