ci: generate examples on PR

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -38,4 +38,21 @@ jobs:
         run: dotnet test --configuration release src/BicepDocs.sln
       - name: Build binary
         run: dotnet publish --configuration release --self-contained true -p:PublishTrimmed=true -p:PublishSingleFile=true -p:TrimmerDefaultAction=copyused -p:SuppressTrimAnalysisWarnings=true -r ${{ matrix.rid }} ./src/BicepDocs.Cli/BicepDocs.Cli.csproj
-    
+      - name: Test samples
+        if: matrix.rid != 'win-x64'
+        run: |
+          mv ./src/BicepDocs.Cli/bin/release/net6.0/${{ matrix.rid }}/publish/bicepdocs
+          ./bicepdocs generate filesystem \
+          --folderPath docs/formatters/examples/inputs \
+          --out ./docs/formatters/examples/generated-output/markdown \
+          --config docs/example-config.yml \
+          --formatter markdown
+      - name: Test samples (win)
+        if: matrix.rid == 'win-x64'
+        run: |
+          mv .\src\BicepDocs.Cli\bin\release\net6.0\${{ matrix.rid }}\publish\bicepdocs.exe
+          .\bicepdocs.exe generate filesystem \
+          --folderPath docs\formatters\examples\inputs \
+          --out .\docs\formatters\examples\generated-output\markdown \
+          --config docs\example-config.yml \
+          --formatter markdown
