--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,17 +22,14 @@ env:
 jobs:
   build-cli:
     name: Build CLI (${{ matrix.rid }})
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         include:
           - rid: win-x64
-            os: windows-latest
           - rid: linux-x64
-            os: ubuntu-latest
           - rid: osx-x64
-            os: macos-latest
           #- rid: linux-musl-x64
           #- rid: linux-arm64
           #- rid: win-arm64
