--- a/src/BicepDocs.Destination.FileSystem.UnitTests/BicepDocs.Destination.FileSystem.UnitTests.csproj
+++ b/src/BicepDocs.Destination.FileSystem.UnitTests/BicepDocs.Destination.FileSystem.UnitTests.csproj
@@ -22,6 +22,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BicepDocs.Core\BicepDocs.Core.csproj" />
-      <ProjectReference Include="..\BicepDocs.Destination.FileSystem\BicepDocs.Destination.FileSystem.csproj" />
+      <ProjectReference Include="..\BicepDocs.Destination.Folder\BicepDocs.Destination.Folder.csproj" />
     </ItemGroup>
 </Project>
