--- a/src/BicepDocs.Destination.Folder/BicepDocs.Destination.Folder.csproj
+++ b/src/BicepDocs.Destination.Folder/BicepDocs.Destination.Folder.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <AssemblyName>LandingZones.Tools.BicepDocs.Destination.FileSystem</AssemblyName>
-        <RootNamespace>LandingZones.Tools.BicepDocs.Destination.FileSystem</RootNamespace>
+        <AssemblyName>LandingZones.Tools.BicepDocs.Destination.Folder</AssemblyName>
+        <RootNamespace>LandingZones.Tools.BicepDocs.Destination.Folder</RootNamespace>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
