--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
       - id: get-version
         run: |
           parsedVersion=$(echo ${{ github.ref }} | cut -dv -f2)
-          echo "::set-output name=version::$parsedVersion"
+          echo "name=$parsedVersion" >> "$GITHUB_OUTPUT"
       - name: Publish BicepDocs
         run: dotnet publish --configuration release --self-contained true -p:AssemblyVersion=${{ steps.get-version.outputs.version }} -p:Version=${{ steps.get-version.outputs.version }} -p:PublishTrimmed=true -p:PublishSingleFile=true -p:TrimmerDefaultAction=copyused -p:SuppressTrimAnalysisWarnings=true -r ${{ matrix.rid }} ./src/BicepDocs.Cli/BicepDocs.Cli.csproj
       - name: Rename binary
