--- a/src/BicepDocs.Cli/BicepDocs.Cli.csproj
+++ b/src/BicepDocs.Cli/BicepDocs.Cli.csproj
@@ -15,6 +15,7 @@
         <RepositoryType>git</RepositoryType>
         <PackageTags>bicep documentation azure arm</PackageTags>
         <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+        <TrimMode>partial</TrimMode>
     </PropertyGroup>
 
     <ItemGroup>
